# gflags-derive

./: .gitignore  Cargo.toml  README.md  RELEASE.md
examples/: README.md
examples/json/: .gitignore  Cargo.toml  config-no-log.json  config.json  empty-config.json  pw-config.json
examples/json/app/: Cargo.toml
examples/json/app/src/: main.rs
examples/json/log/: Cargo.toml
examples/json/log/src/: lib.rs
examples/json/pwgen/: Cargo.toml
examples/json/pwgen/src/: lib.rs
examples/protobuf/: .gitignore  README.md  config.json
examples/protobuf/app/: Cargo.toml  build.rs
examples/protobuf/app/proto/config/v1/: config.proto
examples/protobuf/app/src/: main.rs
examples/protobuf/log/: Cargo.toml  build.rs
examples/protobuf/log/proto/config/v1/: config.proto
examples/protobuf/log/src/: lib.rs
examples/protobuf/pwgen/: Cargo.toml  build.rs
examples/protobuf/pwgen/proto/config/v1/: config.proto
examples/protobuf/pwgen/src/: lib.rs
src/: lib.rs
tests/: README.md  derive_basic.rs  derive_with_custom_type.rs  derive_with_default.rs  derive_with_multiple_comments.rs  derive_with_option.rs  derive_with_placeholder.rs  derive_with_prefix_kebabcase.rs  derive_with_prefix_snakecase.rs  derive_with_skip.rs  derive_with_visibility.rs  expected_failures.rs
tests/common/: mod.rs
tests/expected_failures/: derive_with_visibility.rs  derive_with_visibility.stderr  empty_parameter_list.rs  empty_parameter_list.stderr  empty_prefix.rs  empty_prefix.stderr  empty_type.rs  empty_type.stderr  missing_parameter_list.rs  missing_parameter_list.stderr  missing_value.rs  missing_value.stderr  prefix_wrong_type.rs  prefix_wrong_type.stderr  skip_wrong_type.rs  skip_wrong_type.stderr  type_wrong_type.rs  type_wrong_type.stderr  unexpected_key.rs  unexpected_key.stderr
