[package]
name = "gflags-derive"
version = "0.1.0"
authors = ["Nik Clayton <nik@ngo.org.uk>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
gflags = "0.3"
trybuild = "1.0.25"
