[package]
name = "app"
version = "0.1.0"
authors = ["Nik Clayton <nik@ngo.org.uk>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
prost = "0.6"
gflags = "0.3"
gflags-derive = { path = "../../.." }
log = { path = "../log" }
pwgen = { path = "../pwgen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
prost-build = "0.6"

