[package]
name = "log"
version = "0.1.0"
authors = ["Nik Clayton <nik@ngo.org.uk>"]
edition = "2018"

[dependencies]
prost = "0.6"
gflags = "0.3"
gflags-derive = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"

[build-dependencies]
prost-build = "0.6"
